# TaskTracker

./: CMakeLists.txt  README.md  TrackerApp.cpp  TrackerApp.h  main.cpp  pch.h
Resources/: ColorV2.tracker  TaskTracker22.fbp  TaskTracker22.xrc  TestingSave.tracker  jacob.tracker
Tests/: CMakeLists.txt  EmptyTest.cpp  EventTest.cpp  TrackerTest.cpp  gtest_main.cpp
TrackerLib/: CMakeLists.txt  ColorDlg.cpp  ColorDlg.h  DateDlg.cpp  DateDlg.h  Day.cpp  Day.h  EventDlg.cpp  EventDlg.h  Item.cpp  Item.h  MainFrame.cpp  MainFrame.h  Month.cpp  Month.h  Picture.cpp  Picture.h  PictureFactory.cpp  PictureFactory.h  PictureObserver.cpp  PictureObserver.h  ProjectView.cpp  ProjectView.h  StandardEvent.cpp  StandardEvent.h  Tracker.cpp  Tracker.h  Year.cpp  Year.h  ids.h
html/: _color_dlg_8cpp.html  _color_dlg_8h.html  _color_dlg_8h_source.html  _date_dlg_8cpp.html  _date_dlg_8h.html  _date_dlg_8h_source.html  _day_8cpp.html  _day_8h.html  _day_8h_source.html  _event_dlg_8cpp.html  _event_dlg_8h.html  _event_dlg_8h_source.html  _item_8cpp.html  _item_8h.html  _item_8h_source.html  _main_frame_8cpp.html  _main_frame_8h.html  _main_frame_8h_source.html  _month_8cpp.html  _month_8cpp.js  _month_8h.html  _month_8h_source.html  _picture_8cpp.html  _picture_8h.html  _picture_8h_source.html  _picture_factory_8cpp.html  _picture_factory_8h.html  _picture_factory_8h_source.html  _picture_observer_8cpp.html  _picture_observer_8h.html  _picture_observer_8h_source.html  _project_view_8cpp.html  _project_view_8h.html  _project_view_8h_source.html  _standard_event_8cpp.html  _standard_event_8cpp.js  _standard_event_8h.html  _standard_event_8h_source.html  _tracker_8cpp.html  _tracker_8cpp.js  (+95 more)
html/search/: all_0.js  all_1.js  all_10.js  all_11.js  all_2.js  all_3.js  all_4.js  all_5.js  all_7.js  all_9.js  all_a.js  all_b.js  all_d.js  all_e.js  all_f.js  classes_0.js  (+30 more)
latex/: _tracker_app_8cpp.tex  _tracker_app_8h.tex  _tracker_app_8h_source.tex  annotated.tex  class_tracker_app.eps  class_tracker_app.tex  files.tex  hierarchy.tex  main_8cpp.tex  pch_8h.tex  pch_8h_source.tex  refman.tex
